[gd_scene load_steps=4 format=2]

[ext_resource path="res://Autoloads/Pause.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/PauseBG.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/statsname.tres" type="DynamicFont" id=3]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.772549 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.7102
margin_top = -16.7424
margin_right = -0.710205
margin_bottom = 3.25763
rect_scale = Vector2( 2, 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.7307
margin_top = 98.3911
margin_right = 2.26929
margin_bottom = 118.391
rect_scale = Vector2( 2, 2 )
text = "FullScreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borderless" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.072
margin_top = 164.864
margin_right = 7.92773
margin_bottom = 184.864
rect_scale = Vector2( 2, 2 )
text = "Borderless Window"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
modulate = Color( 0.972549, 0.231373, 0.231373, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.2058
margin_top = -106.765
margin_right = 5.79419
margin_bottom = -86.7646
rect_scale = Vector2( 2, 2 )
text = "EXIT GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SountLabel" type="RichTextLabel" parent="."]
margin_left = 492.373
margin_top = 227.476
margin_right = 639.373
margin_bottom = 242.476
rect_scale = Vector2( 2, 2 )
custom_fonts/mono_font = ExtResource( 3 )
text = "Volume Controller (db)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 439.677
margin_top = 274.401
margin_right = 639.677
margin_bottom = 290.401
rect_scale = Vector2( 2, 2 )
min_value = -40.0
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="Borderless" to="." method="_on_Borderless_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
